# TinyClient

./: .env.example  .gitignore  LICENSE  README.md  dev.ps1  docker-compose.vps.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  tinyclient.db
backend/alembic/: env.py
backend/alembic/versions/: 20250918_0001_initial_users.py  20250918_0002_user_management.py  20250919_0003_token_hardening_and_password_reset.py
backend/app/: database.py  db_commands.py  dependencies.py  main.py  models.py  schemas.py  security.py  setup.py
backend/app/email_templates/: invite_email.html  invite_email.txt  manifest.json  password_reset_email.html  password_reset_email.txt  verification_email.html  verification_email.txt
backend/app/routers/: auth.py  users.py
backend/app/services/: email.py
backend/app/utils/: config.py  strings.py  tokens.py
backend/tests/: test_email_templates.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: api-docs-button.tsx  api-status.tsx  brand-logo.tsx  conditional-header.tsx  header.tsx  mode-toggle.tsx  password-checklist.tsx  protected-route.tsx  theme-provider.tsx  user-menu.tsx
frontend/emails/: build.tsx
frontend/lib/: api-client.ts  auth-context.tsx  config.ts  errors.ts  route-overlay-context.tsx  routes.ts  types.ts  workspace-layout-context.tsx
frontend/services/: auth.ts  users.ts
scripts/: dev.ps1
scripts/infra/: README.md
(+23 files in other folders)
